--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
