--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
